# nem-ledger-app

./: .gitignore  Makefile  load.sh  test_nem.py  test_nem_wallet.py
doc/: transactions_schema.md
examples/: base.py  getPublicKeyForMainnet.py  getPublicKeyForTestnet.py  getVersion.py  signMainnetTransaction.py  signMosaicCreation.py  signMosaicTransaction.py  signMultisigCreation.py  signMultisigTransaction.py  signNamespaceCreation.py  signTestnetTransaction.py
parser/: CMakeLists.txt  fuzz_parser.c  nem_types.h  printers.c  printers.h  test_transaction_parser.c  test_transaction_printer.c  transaction_parser.c  transaction_parser.h  transaction_printer.c  transaction_printer.h  transaction_summary.c  transaction_summary.h
src/: base32.c  base32.h  common.h  limitations.h  main.c  nemHelpers.c  nem_tx.c  nem_tx.h
src/apdu/: constants.h  entry.c  global.c  global.h
src/apdu/messages/: get_app_configuration.h  get_public_key.c  get_public_key.h  sign_transaction.c  sign_transaction.h
src/nem/: nem_helpers.c  nem_helpers.h
src/nem/format/: fields.c  fields.h  format.c  format.h  printers.h  readers.c  readers.h
src/nem/parse/: nem_parse.c  nem_parse.h
src/ui/: ux.h
src/ui/address/: address_ui.c  address_ui.h
src/ui/main/: idle_menu.c  idle_menu.h
src/ui/transaction/: review_menu.c
